# JiMP-Exercises

./: .gitignore  CMakeLists.txt  LICENSE  README.md  filetypes.xml  find.xml  github_settings.xml  other.xml  vcs.xml
JPI-All/: CMakeLists.txt
JPI-All/Lab_02/: CMakeLists.txt  Lab_02.cpp  Lab_02.h  main.cpp
JPI-All/Lab_03/: CMakeLists.txt  Lab_03.cpp  Lab_03.h  main.cpp
JPI-All/Lab_04/: CMakeLists.txt  Lab04.cpp  Lab04.h  main.cpp
codestyles/: Default.xml
fileTemplates/: CMakeLists.txt
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  Factorial.h  main.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: CMakeLists.txt  Schedule.cpp  Schedule.h  Scheduler.cpp  Scheduler.h  SchedulingItem.cpp  SchedulingItem.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  main.cpp  (+1 more)
lab4/: asdf
lab9/academiaserializer/: Building.cpp  Building.h  BuildingRepository.cpp  BuildingRepository.h  CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h  Room.cpp  Room.h  Serializable.cpp  Serializable.h  Serialization.cpp  Serialization.h  Serializer.cpp  Serializer.h  XmlSerializer.cpp  XmlSerializer.h  main.cpp
tests/: CMakeLists.txt
(+105 files in other folders)
